@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/fvwm-themes
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/fvwm-themes/ChangeLog,v 1.12 2005/10/02 19:35:32 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/fvwm-themes/ChangeLog,v 1.13 2005/11/02 17:58:39 gustavoz Exp $
+
+  02 Nov 2005; Gustavo Zacarias <gustavoz@gentoo.org>
+  fvwm-themes-0.7.0.ebuild:
+  Stable on sparc wrt #111102
 
   02 Oct 2005; Aron Griffis <agriffis@gentoo.org> fvwm-themes-0.7.0.ebuild:
   Mark 0.7.0 stable on ia64
